# Arthur-CV

./: .env-non-dev  Assortment_views.py  Dockerfile  README.md  Shelf_views.py  Worker.py  alembic.ini  config.py  crud.py  db.sqlite3  docker compose.yaml  main.py  pyproject.toml  queries.sql  requirements.txt
alembic/versions/: 2024_05_12_2355-a29ccb5d6d9b_create_profile_table.py  28db01db6843_create_posts_table.py  ae469a8a546d_create_products_table.py  d625a96c77a2_create_users_table.py
api_v1/products/: crud.py  dependencies.py  views.py
core/models/: post.py  product.py  user.py
migrations/versions/: 3f913e896d53_initial.py  46d026b30a9f_database_creation.py
models/: models.py
my-package/: pyproject.toml
office-app/: pyproject.toml
users/: crud.py  schemas.py  views.py
