[tool.poetry]
name = "office-management-add"
version = "0.1.0"
description = "web application for managing coffee and biscuits in the office"
authors = ["arthur <artur170195@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.3"
uvicorn = {extras = ["standart"], version = "^0.29.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
