[tool.poetry]
name = "office-management-add"
version = "0.1.0"
description = "web application for managing coffee and biscuits in the office"
authors = ["arthur <artur170195@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.3"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.7.1"}
sqlalchemy = {extras = ["asincio"], version = "^2.0.29"}
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
mako = "^1.3.3"
markupsafe = "^2.1.5"
black = "^24.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
